tests/ui/toply_reject_count.rs
use ply_rs_bw::ToPly;

#[derive(ToPly)]
struct S {
    #[ply(count = "u8")]
    a: Vec<u32>,
}

fn main() {}
